# 3D-renderer

./: CMakeLists.txt  README.md  application.cpp  application.h  camera.cpp  camera.h  figures.cpp  figures.h  main.cpp  object.cpp  object.h  renderer.cpp  renderer.h  screen.cpp  screen.h  test.cpp  test.h  test1.cpp  test1.h  world.cpp  world.h
